--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_STRAPI_API_URL=https://eduokit-admin.herokuapp.com
+#NEXT_PUBLIC_STRAPI_API_URL=https://eduokit-admin.herokuapp.com
+NEXT_PUBLIC_STRAPI_API_URL=http://localhost:1337
