--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "express": "^4.18.1",
     "next": "^11.1.0",
     "next-themes": "^0.0.14",
     "qs": "^6.11.0",
@@ -40,6 +41,7 @@
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.8.3",
     "react-scroll-parallax": "^3.2.0",
+    "requestify": "^0.2.5",
     "strapi-plugin-populate-deep": "^0.1.2"
   },
   "devDependencies": {
