--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "express": "^4.18.1",
+    "framer-motion": "^7.1.0",
     "next": "^11.1.0",
     "next-themes": "^0.0.14",
+    "nextjs-progressbar": "^0.0.14",
     "qs": "^6.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
