--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/styled": "^11.3.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@react-three/fiber": "^8.3.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
@@ -44,7 +45,8 @@
     "react-hook-form": "^7.8.3",
     "react-scroll-parallax": "^3.2.0",
     "requestify": "^0.2.5",
-    "strapi-plugin-populate-deep": "^0.1.2"
+    "strapi-plugin-populate-deep": "^0.1.2",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
