--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/styled": "^11.3.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@react-three/drei": "^9.22.3",
     "@react-three/fiber": "^8.3.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "express": "^4.18.1",
@@ -39,13 +40,11 @@
     "next-themes": "^0.0.14",
     "nextjs-progressbar": "^0.0.14",
     "qs": "^6.11.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.8.3",
     "react-scroll-parallax": "^3.2.0",
-    "requestify": "^0.2.5",
-    "strapi-plugin-populate-deep": "^0.1.2",
     "three": "^0.143.0"
   },
   "devDependencies": {
@@ -53,6 +52,7 @@
     "autoprefixer": "^10.0.4",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-twin": "^1.0.2",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.1.10",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^2.2.2",
