--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.8.3",
     "react-scroll-parallax": "^3.2.0",
+    "requestify": "^0.2.5",
     "three": "^0.143.0"
   },
   "devDependencies": {
