--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
+    "html-react-parser": "^3.0.1",
     "next": "^11.1.0",
     "next-themes": "^0.0.14",
     "nextjs-progressbar": "^0.0.14",
