--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "tailwindcss",
     "free"
   ],
-  "author": "Surjith S M",
+  "author": "Alvaro Peris",
   "license": "ISC",
   "dependencies": {
     "@emotion/css": "^11.1.3",
@@ -38,6 +38,7 @@
     "framer-motion": "^6.5.1",
     "html-react-parser": "^3.0.1",
     "jquery": "^3.6.0",
+    "jsdom": "^20.0.0",
     "next": "^11.1.0",
     "next-themes": "^0.0.14",
     "nextjs-progressbar": "^0.0.14",
@@ -47,10 +48,11 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.8.3",
+    "react-jsdom": "^3.0.0",
     "react-parallax": "^3.5.1",
-    "react-scroll-parallax": "^3.2.0",
     "requestify": "^0.2.5",
-    "three": "^0.143.0"
+    "three": "^0.143.0",
+    "window": "^4.2.7"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
