--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nextjs-progressbar": "^0.0.14",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.6.4",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
