--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
-
+env:
+  NEXT_PUBLIC_STRAPI_API_URL: https://eduokit-admin.herokuapp.com
+  DOCKER_TAG: alpeza/eduoweb:latest
+  
 jobs:
 
   build:
@@ -14,11 +17,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      env:
-        NEXT_PUBLIC_STRAPI_API_URL: https://eduokit-admin.herokuapp.com
-        DOCKER_TAG: alpeza/eduoweb:latest
-        DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
       run: |
-       echo $DOCKER_HUB_USERNAME | docker login --username alpeza --password-stdin;
        docker build . --file Dockerfile --tag "$DOCKER_TAG";
-       docker push "$DOCKER_TAG"
+    - name: Docker push
+      uses: docker/login-action@v2.0.0
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      run:  docker push "$DOCKER_TAG"
+
