--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,23 +6,27 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  NEXT_PUBLIC_STRAPI_API_URL: https://eduokit-admin.herokuapp.com
-  DOCKER_TAG: alpeza/eduoweb:latest
-  
 jobs:
-
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-       docker build . --file Dockerfile --tag "$DOCKER_TAG";
-    - name: Docker push
-      uses: docker/login-action@v2.0.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-      run:  docker push "$DOCKER_TAG"
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: alpeza/eduoweb:latest
+
 
